--- a/UniqueDataBase/libs/DataBaseLib/DataBaseLib.csproj
+++ b/UniqueDataBase/libs/DataBaseLib/DataBaseLib.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+    <PackageReference Include="System.Net.Http.Formatting.dll" Version="5.2.3.0" />
+  </ItemGroup>
+
 </Project>
